--- a/home_regression.ipynb
+++ b/home_regression.ipynb
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
      "output_type": "stream",
      "text": [
       "data_iter\n",
-      " <torch.utils.data.dataloader._SingleProcessDataLoaderIter object at 0x0000017425C95DC8>\n",
+      " <torch.utils.data.dataloader._SingleProcessDataLoaderIter object at 0x0000017425A3E488>\n",
       "image test data tensor([[-8.7347e-01,  4.5810e-01,  1.8434e-01,  ...,  0.0000e+00,\n",
       "          1.0000e+00,  0.0000e+00],\n",
       "        [-8.7347e-01,  5.0093e-01,  5.1970e-01,  ...,  0.0000e+00,\n",
@@ -1785,16 +1785,6 @@
       "          1.0000e+00,  0.0000e+00],\n",
       "        [-8.7347e-01,  2.9737e-02, -2.2418e-01,  ...,  0.0000e+00,\n",
       "          1.0000e+00,  0.0000e+00]])\n",
-      "tensor([[ 0.0000e+00],\n",
-      "        [4.9407e-324],\n",
-      "        [9.8813e-324],\n",
-      "        [1.4822e-323],\n",
-      "        [1.9763e-323],\n",
-      "        [2.4703e-323],\n",
-      "        [2.9644e-323],\n",
-      "        [3.4585e-323],\n",
-      "        [3.9525e-323],\n",
-      "        [4.4466e-323]], dtype=torch.float64)\n",
       "Result preditcion model on dataset:\n",
       " tensor([[-16.5751, -17.0310, -15.6306,  ..., -17.8134, -17.3026,  -9.7491],\n",
       "        [-16.3610, -16.4818, -15.7571,  ..., -17.5661, -16.9187,  -8.6153],\n",
@@ -1819,7 +1809,8 @@
       "         6.5285e-04],\n",
       "        [1.5525e-08, 1.0893e-08, 4.3513e-08,  ..., 4.1899e-09, 7.4096e-09,\n",
       "         3.4133e-05]], grad_fn=<ExpBackward>)\n",
-      "tensor(0.1894, grad_fn=<MaxBackward1>)\n"
+      "tensor(0.1894, grad_fn=<MaxBackward1>)\n",
+      "tensor(1.3087e-10, grad_fn=<MinBackward1>)\n"
      ]
     },
     {
@@ -1836,8 +1827,6 @@
     "data_test = dataiter_test.next()\n",
     "data_test_data = data_test[0]\n",
     "print('image test data',data_test_data)\n",
-    "data_test_label = data_test[1]\n",
-    "print(data_test_label)\n",
     "\n",
     "model_test = model_HR\n",
     "model_test.load_state_dict(torch.load(VERSION))\n",
@@ -1849,7 +1838,7 @@
     "probs = torch.exp(out_fwd)\n",
     "print('probs\\n', probs)\n",
     "print(probs.max())\n",
-    "print(probs.mi)"
+    "print(probs.min())"
    ]
   },
   {
