--- a/home_regression_v2.ipynb
+++ b/home_regression_v2.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 147,
    "metadata": {
     "scrolled": false
    },
@@ -347,7 +347,7 @@
        "[8 rows x 38 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "70.04995836802665"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,6 +376,26 @@
    "source": [
     "# use mean and column to replace the NA or field that are NAN instead to put thm to 0\n",
     "dtf_description.loc['mean']['LotFrontage']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['count', 'mean', 'std', 'min', '25%', '50%', '75%', 'max'], dtype='object')"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtf_description.index"
    ]
   },
   {
@@ -494,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,11 +543,11 @@
     "        # creathe the dummies for train and test set\n",
     "        all_features_dummies = pd.get_dummies(all_features)\n",
     "        all_features_dummies = all_features_dummies.fillna(0)\n",
-    "        #print(all_features_dummies)\n",
+    "        # all features_dummies is 1460 x 289 for the train set and 1459 x 289 for the test set\n",
     "        \n",
     "        # creation of the label of train dataset\n",
-    "        train_label1 = train_csv['Id']\n",
-    "        train_label2 = train_csv['SalePrice']\n",
+    "        train_label1 = self.data_train['Id']\n",
+    "        train_label2 = self.data_train['SalePrice']\n",
     "        train_label = pd.DataFrame(columns = ['Id', 'SalePrice'])\n",
     "        train_label['Id'] = train_label1\n",
     "        train_label['SalePrice'] = train_label2\n",
@@ -591,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,36 +621,74 @@
     "                                   data='train' if x == 'train'\n",
     "                                   else 'valid' if x =='valid'\n",
     "                                   else 'test')\n",
-    "                for x in ['train', 'valid', 'test']}\n",
-    "\n",
-    "data_loader = {x: torch.utils.data.DataLoader(data_dataset[x], batch_size = 10,  shuffle=False) \n",
-    "               for x in ['train', 'valid', 'test']}"
+    "                for x in ['train', 'valid', 'test']}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_loader = {x :torch.utils.data.TensorDataset(data_dataset[x][0][0], data_dataset[x][0][1])\n",
+    "                for x in ['train', 'valid', 'test']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "288\n",
-      "<class 'tuple'>\n"
+      "(tensor([ 0.0673, -0.1844, -0.2178,  0.6461, -0.5072,  1.0461,  0.8967,  0.5230,\n",
+      "         0.5807, -0.2930, -0.9345, -0.4442, -0.7737,  1.2072, -0.1012,  0.4135,\n",
+      "         1.0865, -0.2498,  0.7812,  1.2324,  0.1699, -0.2077,  0.9867, -0.9242,\n",
+      "         0.9731,  0.3064,  0.3488, -0.7406,  0.2000, -0.3595, -0.1033, -0.2859,\n",
+      "        -0.0631, -0.0896, -1.5519,  0.1576,  0.0000,  0.0000,  0.0000,  1.0000,\n",
+      "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         1.0000,  0.0000,  0.0000,  0.0000,  1.0000,  1.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  1.0000,  1.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         1.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
+      "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  1.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  1.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
+      "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000]), tensor([208500]))\n"
      ]
     }
    ],
    "source": [
-    "tensor_dt = data_dataset['train'].__getitem__(1)\n",
-    "print(len(tensor_dt[0][0]))\n",
-    "\n",
-    "print(type(tensor_dt))"
+    "print(data_loader['train'][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 287,
    "metadata": {
     "scrolled": true
    },
@@ -662,15 +720,18 @@
       "Target format at the first row: torch.Size([1021, 1])\n",
       "\n",
       "Train Loader type\n",
-      "<class 'torch.utils.data.dataloader._SingleProcessDataLoaderIter'>\n",
-      "\n",
-      "DATALOADER\n",
-      "images type on batch size = <class 'torch.Tensor'>\n",
-      "images shape on batch size =  torch.Size([10, 1021, 288])\n",
-      "\n",
-      "Targett type on batch size\n",
-      "Target type on batch size = <class 'torch.Tensor'>\n",
-      "Target shape on batch size =  torch.Size([10, 1021, 1])\n"
+      "<class 'iterator'>\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-287-86dfe118c1ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_iter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mimages\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels_target\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_iter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'DATALOADER'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'images type on batch size = {}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
@@ -693,8 +754,7 @@
     "train_iter = iter(data_loader['train'])\n",
     "print(type(train_iter))\n",
     "\n",
-    "images, labels_target = train_iter.next()\n",
-    "print()\n",
+    "images, labels_target = train_iter\n",
     "print('DATALOADER')\n",
     "print('images type on batch size = {}'.format(type(images)))\n",
     "print('images shape on batch size = ', images.shape)\n",
