--- a/home_regression_v2.ipynb
+++ b/home_regression_v2.ipynb
@@ -1051,6 +1051,15 @@
       "  warnings.warn(\"nn.functional.tanh is deprecated. Use torch.tanh instead.\")\n",
       "C:\\Users\\amallet\\Anaconda\\envs\\udacity_env\\lib\\site-packages\\ipykernel_launcher.py:35: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.4825e+09, grad_fn=<DivBackward0>)\n",
+      "Epoch: 1 \tTraining Loss: 2482522880.000000 \tValidation Loss: 2410036992.000000 \tTime since the beginning 10.2 min \tLearning rate: 0.010000 \n",
+      "Validation loss decreased (inf --> 2410036992.000000).  Saving model ...\n"
+     ]
     }
    ],
    "source": [
