kaggle submission result in markdown for reference

--- a/HR_Sklearn.ipynb
+++ b/HR_Sklearn.ipynb
@@ -356,11 +356,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Scoring after Kaggle submission\n",
+    "\n",
+    "Score = 0.40613 - Ranking 4410/4705"
+   ]
   }
  ],
  "metadata": {
